samples/_failures_safe/1761215359_50a676_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_17edab5e.c: In function ‘graph_bfs’:
./samples/SAFE/__tmp_17edab5e.c:170:16: error: expected declaration or statement at end of input
  170 |         struct GraphEdge *edge = current->edges;
      |                ^~~~~~~~~
./samples/SAFE/__tmp_17edab5e.c:170:16: error: expected declaration or statement at end of input
